tests/negative/typecheck/sum_annot_repeat.orng
// sum_annot_repeat.orng:9:23: error: duplicate item `y`
//     let x: (y:Int | y:Int | y:Int)
//                      ^
// sum_annot_repeat.orng:9:15: note: other definition of `y` here:
//     let x: (y:Int | y:Int | y:Int)
//              ^
// 
fn main() -> Int {
    let x: (y:Int | y:Int | y:Int)
    0
}